Edge-block DP without shuffling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ endif()
 #set(SOURCE_EXE src/main.cpp)
 add_compile_definitions("FILE_INPUT")
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-    add_compile_options(-g -fsanitize=address)
-    link_libraries(-g -fsanitize=address)
+    add_compile_options(-g -O0 -fsanitize=address)
+    link_libraries(-g -O0 -fsanitize=address)
 endif()
 if (CMAKE_BUILD_TYPE STREQUAL "Release")
     add_compile_options(-O3)
