--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,9 @@ if(UNIX)
 endif()
 
 #set(SOURCE_EXE src/main.cpp)
-add_compile_definitions(FILE_INPUT)
+#add_compile_definitions(FILE_INPUT)
 #add_compile_definitions(RUN_TESTS)
+add_compile_definitions(PARAM_SEARCH)
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     add_compile_options(-g -O0 -fsanitize=address)
     link_libraries(-g -O0 -fsanitize=address)
